--- a/css/game.css
+++ b/css/game.css
@@ -101,3 +101,38 @@ body {
     left: 9%;
     font-size: 30px;
 }
+
+
+.progress-bar-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  
+}
+
+#progress-bar {
+    width: 30%;
+    height: 10%;
+    margin-top: 0.5%;
+    transition: width 1s ease;
+  
+    
+}
+
+
+label {
+    font-size: 20px;
+    animation: 1s blink infinite;
+   
+}
+
+
+  
