--- a/css/game.css
+++ b/css/game.css
@@ -135,4 +135,19 @@ label {
 }
 
 
+#timer{
+    position: absolute;
+    top:12%;
+    right: 11%;
+    font-size: 30px;
+
+}
+
+#clock{
+    position: absolute;
+    top: 12%;
+    right: 9%;
+}
+
+
   
