--- a/css/view.css
+++ b/css/view.css
@@ -72,6 +72,8 @@ body {
 }
 
 
+
+
 .level-button:hover{
     transform: scale(1.1);
     transition: 0.5s;
@@ -84,6 +86,10 @@ body {
 }
 
 #level3{
+    opacity: 0.5;
+}
+
+#level4{
     opacity: 0.5;
 }
 
