--- a/css/game.css
+++ b/css/game.css
@@ -88,7 +88,7 @@ body {
 }
 
 
-#animals_count{
+#targets_count{
     position: absolute;
     top: 87%;
     left: 9%;
@@ -147,6 +147,14 @@ label {
     position: absolute;
     top: 12%;
     right: 9%;
+}
+
+#Health{
+    position: absolute;
+    top: 5%;
+    left: 45%;
+    font-size: 30px;
+    opacity: 0;
 }
 
 
