--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@ body{
     text-shadow: 5px 5px #191C1F; /* Sombra preta */
     @import url("https://fonts.cdnfonts.com/css/chinese-rocks");
     font-family: 'Chinese Rocks Rg', sans-serif;
-    background-image: url("../img/background.jpg");
+    background-image: url("../assets/wild_gunslinger/img/background.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
